--- a/gdisk/trunk/PKGBUILD
+++ b/gdisk/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Hokum <hokum_at_mail_dot_ru>
 pkgname=gdisk
 pkgver=0.6.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A text-mode partitioning tool that works on Globally Unique Identifier (GUID) Partition Table (GPT) disks."
 arch=('i686' 'x86_64')
 url="http://www.rodsbooks.com/gdisk"
@@ -16,11 +16,11 @@ build() {
   make || return 1
   install -D -m755 gdisk $pkgdir/sbin/gdisk
   install -D -m755 sgdisk $pkgdir/sbin/sgdisk
-  install -D -m644 gdisk.8 $pkgdir/usr/share/man/man8
-  install -D -m644 sgdisk.8 $pkgdir/usr/share/man/man8
-  install -D -m644 gdisk.html $pkgdir/usr/share/gdisk
-  install -D -m644 sgdisk.html $pkgdir/usr/share/gdisk
-  install -D -m644 README $pkgdir/usr/share/gdisk
-  install -D -m644 CHANGELOG $pkgdir/usr/share/gdisk
+  install -D -m644 gdisk.8 $pkgdir/usr/share/man/man8/gdisk.8
+  install -D -m644 sgdisk.8 $pkgdir/usr/share/man/man8/sgdisk.8
+  install -D -m644 gdisk.html $pkgdir/usr/share/gdisk/gdisk.html
+  install -D -m644 sgdisk.html $pkgdir/usr/share/gdisk/sgdisk.html
+  install -D -m644 README $pkgdir/usr/share/gdisk/README
+  install -D -m644 CHANGELOG $pkgdir/usr/share/gdisk/CHANGELOG
 }
 md5sums=('75110b32e1ed27b0fcac6f0d89feae57')
