--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgname=thunar
 pkgver=1.1.6
-pkgrel=4
+pkgrel=5
 pkgdesc="modern file manager for Xfce"
 arch=('i686' 'x86_64')
 license=('GPL2' 'LGPL2.1')
 url="http://thunar.xfce.org"
 groups=('xfce4')
 depends=('desktop-file-utils' 'libexif' 'hicolor-icon-theme' 'libnotify' 'udev'
-         'gtk2' 'exo>=0.5.4' 'libxfce4util>=4.7.3' 'libxfce4ui' 'libpng' 'udisks')
+         'gtk2' 'exo>=0.5.4' 'libxfce4util>=4.7.3' 'libxfce4ui' 'libpng')
 makedepends=('intltool' 'gtk-doc' 'xfce4-panel>=4.7.4')
 optdepends=('gvfs: for trash support, mounting with udisk and remote filesystems'
             'xfce4-panel: for trash applet'
