--- a/kdepim-runtime/kde-unstable/PKGBUILD
+++ b/kdepim-runtime/kde-unstable/PKGBUILD
@@ -3,8 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdepim-runtime
-pkgver=4.5.93
-_pkgver=4.6beta3
+pkgver=4.5.94
 pkgrel=1
 pkgdesc='KDE PIM Runtime Environment'
 arch=('i686' 'x86_64')
@@ -14,14 +13,14 @@ depends=('kdepimlibs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 install=${pkgname}.install
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-source=("http://download.kde.org/unstable/kdepim/${pkgver}/${pkgname}-${_pkgver}.tar.bz2")
-sha1sums=('564dd6e0cf2afada59aefb0af6fbf057fa113ace')
+source=("http://download.kde.org/unstable/kdepim/${pkgver}/${pkgname}-${pkgver}.tar.bz2")
+sha1sums=('81631b6586ca74397ac5083e24f8e4f592c4f043')
 
 build() {
 	cd $srcdir
 	mkdir build
 	cd build
-	cmake ../${pkgname}-${_pkgver} \
+	cmake ../${pkgname}-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_SKIP_RPATH=ON \
 		-DCMAKE_INSTALL_PREFIX=/usr
