--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,23 +1,29 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer:
+# Contributor: damir <damir@archlinux.org>
 
 pkgname=libnet
-pkgver=1.1.4
+pkgver=1.1.5
 pkgrel=1
-pkgdesc="A library which provides API for commonly used low-level net functions."
+pkgdesc="A library which provides API for commonly used low-level net functions"
 arch=('i686' 'x86_64')
 url="http://sourceforge.net/projects/libnet-dev/"
 license=('BSD')
-depends=('glibc')
+depends=('glibc' 'sh')
 options=('!libtool')
-source=(http://sourceforge.net/projects/libnet-dev/files/libnet-dev/${pkgname}-${pkgver}.tar.gz)
-md5sums=('c5e06418a89cc4209f677a776a798fd9')
-sha1sums=('86a2f75b52c5b15dbd41c3e03356167de9c883e4')
+source=(http://downloads.sourceforge.net/libnet-dev/${pkgname}-${pkgver}.tar.gz)
+md5sums=('a9bc1d75a610efcfee200d3e28d8eb8f')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr || return 1
-  make CFLAGS="${CFLAGS} -fPIC"  || return 1
-  make DESTDIR="${pkgdir}" install || return 1
-  install -D -m644 doc/COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
+  ./configure --prefix=/usr
+  make CFLAGS="${CFLAGS} -fPIC"
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
+
+  install -Dm644 doc/COPYING \
+    "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
