--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,11 +5,12 @@
 
 pkgname=exo
 pkgver=0.5.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Extensions to Xfce by os-cillation"
 arch=('i686' 'x86_64')
 license=('GPL2' 'LGPL')
 url="http://www.xfce.org/projects/exo"
+groups=('xfce4')
 depends=("libxfce4util>=4.7.3" 'gtk2' 'hicolor-icon-theme' )
 makedepends=('pygtk' 'perl-uri' 'intltool' 'gtk-doc' 'xorg-iceauth')
 optdepends=('perl-uri: for mail-compose helper script')
