--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,11 +4,12 @@
 
 pkgname=libxfce4util
 pkgver=4.7.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Basic utility non-GUI functions for Xfce"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
+groups=('xfce4')
 depends=("glib2")
 makedepends=('pkgconfig' 'intltool' 'gtk-doc')
 options=('!libtool')
