--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=acl
 pkgver=2.2.49
-pkgrel=1
-pkgdesc="Library for filesystem ACL support"
+pkgrel=2
+pkgdesc="Access control list utilities, libraries and headers"
 arch=('i686' 'x86_64')
 url="http://savannah.nongnu.org/projects/acl"
 license=('LGPL')
@@ -16,19 +16,18 @@ source=(http://mirrors.zerg.biz/nongnu/${pkgname}/${pkgname}-${pkgver}.src.tar.g
 sha256sums=('b9c7f4752e4ef4930a62fa5aa0d7efe1cba2b5a3a2d6ee2b45c0a70c72b7e5d5')
 
 build() {
-  cd $srcdir/acl-$pkgver
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
-  ./configure --prefix=/usr
-  make || return 1 
-  make prefix=$pkgdir/usr/ install install-lib install-dev
+  export INSTALL_USER=root INSTALL_GROUP=root 
+  ./configure --prefix=/usr --libdir=/lib --libexecdir=/usr/lib
+  make 
+}
 
-  # tidy up
-  cd $pkgdir
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
-  mkdir -v lib
-  mv -v usr/lib/libacl.so* lib/
-  ln -sv ../../lib/libacl.so.1 usr/lib/libacl.so
+  make DIST_ROOT="${pkgdir}" install install-lib install-dev
 
-  mv -v usr/libexec/libacl.{a,la} usr/lib/
-  rm -rf $pkgdir/usr/libexec
+  rm ${pkgdir}/lib/libacl.a
+  chmod 0755 ${pkgdir}/lib/libacl.so.*.*.*
 }
