--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=syslinux
 pkgver=4.03
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
-pkgdesc="Collection of flexible boot loaders that boot from FAT, ext2/3/4 and btrfs filesystems, from CDs and via PXE"
+pkgdesc="Collection of boot loaders that boot from FAT, ext2/3/4 and btrfs filesystems, from CDs and via PXE"
 url="http://syslinux.zytor.com/"
 license=('GPL2')
 depends=('perl' 'glibc')
@@ -15,8 +15,13 @@ optdepends=('perl-passwd-md5:  For md5pass'
             'mtools:           For mkdiskimage and syslinux'
            )
 makedepends=('nasm')
+backup=('boot/syslinux/syslinux.cfg')
 source=(http://www.kernel.org/pub/linux/utils/boot/syslinux/$pkgname-${pkgver}.tar.bz2
-        syslinux-dont-build-dos-windows-targets.patch)
+        syslinux-dont-build-dos-windows-targets.patch
+        syslinux.cfg)
+sha256sums=('c65567e324f9d1f7f794ae8f9578a0292bbd47d7b8d895a004d2f0152d0bda38'
+            '7e9301e37113d8bcddadc3a7d2fd6f3f433ef20ef6fa6df9fe9e256fa8868753'
+            'b4ba8f9daa67ec35da6e05adb610469bc8c4facf488468c1ec3e5860ba75313d')
 
 build() {
   # Do not try to build syslinux with our default LDFLAGS, it will fail
@@ -32,6 +37,7 @@ build() {
 package() {
   cd "$srcdir"/$pkgname-${pkgver}
   make INSTALLROOT="$pkgdir" AUXDIR=/usr/lib/syslinux install
+
+  # Install the default configuration
+  install -D -m644 "$srcdir"/syslinux.cfg "$pkgdir"/boot/syslinux/syslinux.cfg
 }
-md5sums=('a7ca38a0a5786b6efae8fb01a1ae8070'
-         '895722a392f3d798a7cc24bc154656f0')
