--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=libsmbios
 pkgver=2.2.26
-pkgrel=1
+pkgrel=2
 pkgdesc="A library for providing access to as much BIOS information as possible"
 arch=(i686 x86_64)
 url="http://linux.dell.com/libsmbios/main/index.html"
@@ -39,7 +39,9 @@ package() {
   rm -rf "${pkgdir}/etc/yum"
   rm -rf "${pkgdir}/usr/lib/yum-plugins"
 
+  sed -e 's|#!/usr/bin/python|#!/usr/bin/python2|g' \
+      -i "${pkgdir}"/usr/sbin/smbios-{{wakeup,token,wireless}-ctl,lcd-brightness,rbu-bios-update,passwd,sys-info}
+
   install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
   install -m644 ../COPYING-OSL "${pkgdir}/usr/share/licenses/${pkgname}/"
-
 }
