--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=freetype2
 pkgver=2.4.4
-pkgrel=1
+pkgrel=2
 pkgdesc="TrueType font rendering library"
 arch=(i686 x86_64)
 license=('GPL')
@@ -12,7 +12,8 @@ depends=('zlib')
 options=('!libtool')
 source=(http://downloads.sourceforge.net/sourceforge/freetype/freetype-${pkgver}.tar.bz2
         freetype-2.3.0-enable-spr.patch
-        freetype-2.2.1-enable-valid.patch)
+        freetype-2.2.1-enable-valid.patch
+        allow-hlineto-vlineto-without-arguments.patch)
 md5sums=('b3e2b6e2f1c3e0dffa1fd2a0f848b671'
          '816dc8619a6904a7385769433c0a8653'
          '214119610444c9b02766ccee5e220680')
@@ -21,8 +22,13 @@ build() {
   cd "${srcdir}/freetype-${pkgver}"
   patch -Np1 -i "${srcdir}/freetype-2.3.0-enable-spr.patch"
   patch -Np1 -i "${srcdir}/freetype-2.2.1-enable-valid.patch"
+  patch -Np1 -i "${srcdir}/allow-hlineto-vlineto-without-arguments.patch"
 
   ./configure --prefix=/usr
   make
   make DESTDIR="${pkgdir}" install
 }
+md5sums=('b3e2b6e2f1c3e0dffa1fd2a0f848b671'
+         '816dc8619a6904a7385769433c0a8653'
+         '214119610444c9b02766ccee5e220680'
+         'bb094e147b25892f1d04cfb5ff877bce')
